# enocean-async-tui

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/specs/: architecture.md  roadmap.md
docs/specs/phase-0/: README.md  app-shell.md  ci.md  dongle-service.md  enocean-async-notes.md  fake-dongle.md  settings.md
src/enocean_async_tui/: app.py  cli.py  settings.py
src/enocean_async_tui/dongle/: __init__.py  _streams.py  fake.py  protocol.py  service.py  types.py
tests/: test_app.py  test_settings.py
tests/dongle/: test_fake.py  test_service.py
tests/fixtures/: README.md
tests/fixtures/recordings/: burst-300.jsonl  single-rps.jsonl
