[project]
name = "enocean-async-tui"
version = "0.1.0"
description = "A TUI to manage EnOcean devices with enocean-async"
readme = "README.md"
authors = [
    { name = "Emmanuel Sciara", email = "emmanuel.sciara@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "enocean-async>=0.13.1",
    "textual>=8.2.3",
]

[project.scripts]
enocean-tui = "enocean_async_tui.app:main"

[build-system]
requires = ["uv_build>=0.10.10,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.20.1",
    "pre-commit>=4.5.1",
    "pylint>=4.0.5",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.11",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
src = ["src"]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.14"
strict = true
files = ["src"]

[tool.pylint.main]
source-roots = ["src"]

[tool.pylint.format]
max-line-length = 120
